# topicstreams

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yml.example  docker-compose.yml  pyproject.toml  start.sh
api/: auth.py  exceptions.py  main.py  websearch.py
common/: block_signals.py  config.py  database.py  logging_config.py  model.py  settings.py  utils.py
config/: anti_detection.yml  anti_detection.yml.example  scraper.yml  scraper.yml.example
docs/: ANTI_BOT_DETECTION.md  API_REFERENCE.md  AUTHENTICATION_SECURITY.md  BING_WEB_SERP_PARSING.md  BLOCK_SIGNAL_CHARACTERIZATION.md  BLOCK_SIGNAL_FINDINGS.md  BRAVE_WEB_SERP_PARSING.md  CONFIGURATION.md  DATABASE_ACCESS.md  DUCKDUCKGO_UNSUPPORTED.md  GOOGLE_WEB_SERP_PARSING.md  OBSERVABILITY.md  POSTMORTEM_2026-06-13_OOM_HANG.md  PRESSURE_TEST_RATE_LIMITS.md  SCRAPING_BEHAVIOR.md  TASK_SCHEDULER.md  WEBSOCKET_SCALABILITY.md  WEB_SEARCH_WARMUP.md  WORKER_ENGINE_BINDING.md  YAHOO_WEB_SERP_PARSING.md
postgres/: init.sql
requirements/: all.txt  api.txt  scraper.txt
scraper/: browser.py  cooldown.py  keepalive.py  main.py  saturation.py  scraper.py  tasks.py  webqueue.py  worker.py
scripts/: generate_api_key.py  manage_api_keys.py  pressure_test.py
tests/: conftest.py  test_config.py  test_engine_cooldown.py  test_keepalive.py  test_logging.py  test_metrics.py  test_model.py  test_news_cursor.py  test_rate_limit.py  test_saturation.py  test_scrape_orchestration.py  test_scraper_parser.py  test_status_health.py  test_tasks.py  test_topic_schedule.py  test_utils.py  (+4 more)
(+26 files in other folders)
