# All Python dependencies live here. The Docker images install a per-service
# group with `pip install --group <api|scraper>`; `dev` holds local tooling.

# Minimal metadata so uv knows the Python version; the app isn't packaged
# (tool.uv.package = false), it's run from source with PYTHONPATH=/app.
[project]
name = "topicstreams"
version = "0.1.0"
requires-python = ">=3.14"

[tool.uv]
package = false

[dependency-groups]
common = [
    "psycopg2-binary>=2.9.10,<3",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0,<3",
]
api = [
    { include-group = "common" },
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
]
scraper = [
    { include-group = "common" },
    "playwright>=1.49.1,<2",
    "playwright-stealth>=2.0.3,<3",
    "beautifulsoup4>=4.12.3,<5",
    "lxml>=5.3.0,<7",
    "pyyaml>=6.0.0,<7",
]
dev = [
    # Include both service groups so tests can import any app module
    # (the scraper group is needed for the parser tests).
    { include-group = "api" },
    { include-group = "scraper" },
    "black>=24.0,<26",
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",          # FastAPI TestClient
    "testcontainers>=4,<5",    # ephemeral Postgres for integration tests
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Starlette's TestClient nudges toward httpx2; httpx works fine here.
    "ignore:Using `httpx` with `starlette.testclient`",
]
